adding some team info

--- a/EM.ipynb
+++ b/EM.ipynb
@@ -17,7 +17,17 @@
     "from sklearn import cluster\n",
     "import matplotlib.pyplot as plt\n",
     "from scipy import ndimage\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[//]: Info\n",
+    "# Yasmeen Khaled\t\t37-6614\t\tyasmeen.abdelmohsen@student.guc.edu.eg\n",
+    "# Michael George\t\t37-3063\t\tmichael.khalil@student.guc.edu.eg\n",
+    "# Olfat Mostafa\t\t37-19029\tolfat.aaf@student.guc.edu.eg\n"
    ]
   },
   {
